# Cmdarr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  Dockerfile  Makefile  QUICKSTART.md  README.md  __version__.py  cache_manager.py  entrypoint.sh  pyproject.toml  readme-extended.md  renovate.json  requirements-dev.txt  requirements.txt  run_fastapi.py
.github/: dependabot.yml
app/: auth.py  auth_middleware.py  main.py  security_headers.py  websocket.py
clients/: client_bandsintown.py  client_base.py  client_deezer.py  client_deezer_events.py  client_jellyfin.py  client_lastfm.py  client_lidarr.py  client_listenbrainz.py  client_musicbrainz.py  client_plex.py  client_seatgeek.py  client_setlistfm.py  client_songkick.py  client_spotify.py  client_ticketmaster.py  client_xmplaylist.py
commands/: artist_events_refresh.py  command_base.py  config_adapter.py  daylist.py  discovery_lastfm.py  discovery_listenbrainz.py  library_cache_builder.py  new_releases_discovery.py  playlist_generator_helpers.py  playlist_generator_lfm_similar.py  playlist_generator_local_discovery.py  playlist_generator_mood.py  playlist_generator_setlistfm.py  playlist_generator_top_tracks.py  playlist_generator_xmplaylist.py  playlist_sync.py  playlist_sync_discovery_maintenance.py  playlist_sync_listenbrainz.py  playlist_sync_listenbrainz_curated.py  setlistfm_parse.py
database/: README.md  cache_models.py  config_models.py  database.py  init_commands.py  migrate.py  migrate_split_simple.py  migration_framework.py  models.py  version_migrations.py
(+213 files in other folders)
